# mlserver_demo

./: README.md  pyproject.toml  test.ipynb
.metrics/: counter_14180.db  gauge_livesum_14180.db  histogram_14180.db  summary_14180.db
HuggingFace_Transformer/: send_test_inference_request.py
custom_inference/energy_price/entsoe/: .env  Dockerfile  X_test.pkl  entose_train_data_load.json  get_data.py  maciejCustomInferenceRuntime.py  model-setting.py  model-settings.json  requirements.txt  save_model.py  send_test_inference_request.py  tests.ipynb  xgboost_model.pkl  y_test.pkl
custom_inference/energy_price/entsoe/.metrics/: counter_115716.db  counter_122275.db  histogram_115716.db  histogram_122275.db  summary_115716.db  summary_122275.db
custom_inference/numpyro-divorce/: models.py  save_model.py  send_test_inference_request.py
mushroom-xgboost/: inference_request.py  model-settings.json  mushroom-xgboost.json  save_model.py
similarity_model/: model-settings.json  my_model.py
tests/: content_types.py
