[tool.poetry]
name = "mlserver-demo"
version = "0.1.0"
description = ""
authors = ["Maciej Kozubal <matthiaskozubal@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ipykernel = "^6.27.1"
notebook = "^7.0.6"
xgboost = "^2.0.2"
scikit-learn = "^1.3.2"
mlserver = "^1.3.5"
mlserver-xgboost = "^1.3.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
